fix nav on mobile

--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -267,6 +267,7 @@ h5 {
   width: 100%;
   top: 0;
   left: 0;
+  right: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -392,8 +393,8 @@ h5 {
 }
 #welcome .grid {
   margin: 0 auto;
-  -webkit-animation: puff-in-hor 0.6s linear both;
-  animation: puff-in-hor 0.6s linear both;
+  -webkit-animation: fadeEffect 0.6s linear both;
+  animation: fadeEffect 0.6s linear both;
 }
 #welcome .grid .welcome-img {
   -ms-grid-column-span: 12;
@@ -1028,8 +1029,11 @@ footer .love {
   #welcome {
     min-height: 60vh;
   }
+
   #welcome .grid {
     margin: 0 auto;
+    /* -webkit-animation: puff-in-hor 0.6s linear both; */
+    /* animation: puff-in-hor 0.6s linear both; */
   }
   #welcome .grid .welcome-img {
     -ms-grid-column-span: 5;
